--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <img style= "margin-left: 250px" 
 
-src="https://d85wutc1n854v.cloudfront.net/live/products/600x375/WB0H30279.png?v
+src="https://upload.wikimedia.org/wikipedia/en/b/bf/RMIT_Music_logo.png
 
-=1.0" width="600" height= "375" 
+=1.0" width="1000" height= "400" 
 
 alt="profile_images/461774455048396800/oq8wCXt9_400x400"/>
 
