--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html> 
 
-<html> 
+<html>
+    <title>Nail Entertainment</title> 
 
 <body> 
 
@@ -14,9 +15,7 @@
 
 <img style= "margin-left: 250px" 
 
-src="https://upload.wikimedia.org/wikipedia/en/b/bf/RMIT_Music_logo.png
-
-=1.0" width="800" height= "375" 
+src="https://upload.wikimedia.org/wikipedia/en/0/0c/Must_be_the_music_logo.jpg" width="800" height= "375" 
 
 alt="profile_images/461774455048396800/oq8wCXt9_400x400"/>
 
